[package]
name = "pixelsprayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
argh = "0.1.12"
bytes = "1.5.0"
fastrand = "2.0.1"
png = "0.17.10"
tokio = { version = "1.35.1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
